# chipbee

./: .gitignore  README.md
driver/: Makefile  buf.h  main.c  tty.c  tty.h  usb.c  usb.h
firmware/: Cargo.toml  openocd.cfg
firmware/src/: device_class.rs  main.rs
