[package]
name = "chipbee-firmware"
version = "0.1.0"
authors = ["transistor <trans@jabberwocky.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
stm32f4xx-hal = { version = "0.9", features = ["stm32f407", "rt", "usb_fs"] }
embedded-hal = "0.2"
usb-device = "0.2.2"

